force-app/main/default/objects/Scribe_Stage_Requirement__mdt/Scribe_Stage_Requirement__mdt.object-meta.xml
<CustomObject>
    <description>Defines what "complete" looks like per Opportunity stage, so Flag Missing Info is tunable per sales process without a code change. One row per (stage, requirement).</description>
    <label>Scribe Stage Requirement</label>
    <pluralLabel>Scribe Stage Requirements</pluralLabel>
</CustomObject>