force-app/main/default/objects/Scribe_Stage_Requirement__mdt/fields/Detection_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Detection_Keywords__c</fullName>
    <label>Detection Keywords</label>
    <type>LongTextArea</type>
    <length>2048</length>
    <description>Comma-separated, case-insensitive keywords/phrases. If any appears in the call recap, this requirement is considered covered for the stage.</description>
</CustomField>