force-app/main/default/objects/Scribe_Stage_Requirement__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Inactive rows are ignored by Flag Missing Info.</description>
</CustomField>