force-app/main/default/objects/Scribe_Stage_Requirement__mdt/fields/Reminder_Due_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Due_In_Days__c</fullName>
    <label>Reminder Due In Days</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>How many days out the reminder Task is due, relative to the call date. Defaults to 3 when blank.</description>
</CustomField>