force-app/main/default/objects/Scribe_Stage_Requirement__mdt/fields/Reminder_Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Task_Subject__c</fullName>
    <label>Reminder Task Subject</label>
    <type>Text</type>
    <length>255</length>
    <description>Subject line for the reminder Task created when this requirement is missing.</description>
</CustomField>