force-app/main/default/objects/Scribe_Stage_Requirement__mdt/fields/Requirement_Key__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Key__c</fullName>
    <label>Requirement Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Stable machine key for the requirement (e.g. EconomicBuyer, Budget, Timeline).</description>
</CustomField>