force-app/main/default/objects/Scribe_Stage_Requirement__mdt/fields/Requirement_Label__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Label__c</fullName>
    <label>Requirement Label</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Human-readable description of the requirement, used in reminder Task subjects and agent messages.</description>
</CustomField>