force-app/main/default/objects/Scribe_Stage_Requirement__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
    <description>Display/evaluation order of requirements within a stage.</description>
</CustomField>