force-app/main/default/objects/Scribe_Stage_Requirement__mdt/fields/Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Stage_Name__c</fullName>
    <label>Stage Name</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The Opportunity StageName this requirement applies to (must match the picklist value exactly).</description>
</CustomField>